Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanNumber.quorum
class Main
    action Main
        number v = 5.0
        Test(v)
    end

    action Test(boolean var)
    end
end
